# UPR

./: main
Alokacia/: CMakeLists.txt  main
TGA/: CMakeLists.txt  idk.tga  main  main.c
TGA_2/: CMakeLists.txt  main.c
Zadanie_1/: CMakeLists.txt  main.c
Zadanie_2/: CMakeLists.txt  main  main.c  run-tests.py
Zadanie_2/test-left-diagonal-1/: stdout
Zadanie_2/test-left-diagonal-2/: stdin  stdout
Zadanie_2/test-letter-p-1/: stdout
Zadanie_2/test-letter-p-2/: stdin
Zadanie_2/test-rectangle-hole-1/: stdout
Zadanie_3/: CMakeLists.txt  drawing.h  main  main.c
Zadanie_4/: CMakeLists.txt  main.c  run-tests.py
Zadanie_5/: CMakeLists.txt  main  main.c  run-tests.py
Zadanie_6/: CMakeLists.txt  main  main.c  run-tests.py
Zadanie_7/: CMakeLists.txt  main  main.c
Zadanie_8/: CMakeLists.txt  input.txt  main  main.c  run-tests.py
arrays/: CMakeLists.txt  main  main.c
debuging/: CMakeLists.txt  main.c
ex_3/: CMakeLists.txt  main.c
files/: CMakeLists.txt  main  main.c  points.txt  users.txt
finalterm/: CMakeLists.txt  main  main.c
finalterm_2/: CMakeLists.txt  main  main.c
midterm_1/: CMakeLists.txt  main  main.c  run-tests.py
midterm_2/: CMakeLists.txt  main.c
midterm_3/: CMakeLists.txt  main  main.c
sdl/: CMakeLists.txt  MakeFile  array.c  array.h  main  main.c
sld_hodina/: CMakeLists.txt  array.c  array.h  atoms  atoms.c
snow/: CMakeLists.txt  Makefile  main  main.c
strings/: CMakeLists.txt  main.c
structures/: CMakeLists.txt  main  main.c
untitled/: main.c
zadanie_9/: CMakeLists.txt  main  main.c  out-1.txt  run-tests.py
(+128 files in other folders)
